--- a/Bincms/Tpl/item/create.html
+++ b/Bincms/Tpl/item/create.html
@@ -2,9 +2,9 @@
 <php>print_r($str);</php>
 <div class="mainBt">
     <ul>
-        <li class="li1">商城</li>
-        <li class="li2">项目管理</li>
-        <li class="li2 li3">新增</li>
+        <li class="li1">咨询</li>
+        <li class="li2">咨询管理</li>
+        <li class="li2 li3">咨询新增</li>
     </ul>
 </div>
 <form  target="baocms_frm" action="<{:U('item/create')}>" method="post">
@@ -14,7 +14,7 @@
 
 
             <table bordercolor="#e1e6eb" cellspacing="0" width="100%" border="1px"  style=" border-collapse: collapse; margin:0px; vertical-align:middle; background-color:#FFF;" >
-                <tr>
+               <!--  <tr>
                     <td  class="lfTdBt">医院：</td>
                     <td class="rgTdBt">
                         <div class="lt">
@@ -23,7 +23,7 @@
                         </div>
                         <a mini="select"  w="1000" h="600" href="<{:U('hospital/select')}>" class="seleSj">选择医院</a>
                     </td>
-                </tr>
+                </tr> -->
                 <script>
                     /*
                      $(document).ready(function (e) {
