--- a/Bincms/Tpl/lawyerkowncate/edit.html
+++ b/Bincms/Tpl/lawyerkowncate/edit.html
@@ -1,6 +1,6 @@
 <div class="mainScAdd ">
     <div class="tableBox">
-        <form target="baocms_frm" action="<{:U('tuancate/edit',array('cate_id'=>$detail['cate_id']))}>" method="post">
+        <form target="baocms_frm" action="<{:U('lawyerkowncate/edit',array('cate_id'=>$detail['cate_id']))}>" method="post">
             <table bordercolor="#e1e6eb" cellspacing="0" width="100%" border="1px"  style=" border-collapse: collapse; margin:0px; vertical-align:middle; background-color:#FFF;" >
                 <tr>
                     <td class="lfTdBt">分类：</td>
