--- a/Bincms/Tpl/lawyerkown/edit.html
+++ b/Bincms/Tpl/lawyerkown/edit.html
@@ -3,7 +3,7 @@
 <div class="mainBt">
     <ul>
         <li class="li1">商城</li>
-        <li class="li2">项目管理</li>
+        <li class="li2">法识管理</li>
         <li class="li2 li3">编辑</li>
     </ul>
 </div>
@@ -11,7 +11,7 @@
     <div class="mainScAdd ">
         <div class="tableBox">
             <table bordercolor="#e1e6eb" cellspacing="0" width="100%" border="1px"  style=" border-collapse: collapse; margin:0px; vertical-align:middle; background-color:#FFF;" >
-                <tr>
+              <!--   <tr>
                     <td class="lfTdBt">医院：</td>
                     <td class="rgTdBt"> <div class="lt">
                             <input type="hidden" id="hospital_id" name="data[hospital_id]" value="<{$detail.hospital_id|default=''}>"/>
@@ -19,7 +19,7 @@
                         </div>
                         <a mini="select"  w="1000" h="600" href="<{:U('hospital/select')}>" class="seleSj">选择医院</a>
                     </td>
-                </tr>
+                </tr> -->
                 <tr>
                     <td class="lfTdBt">分类：</td>
                     <td class="rgTdBt"> 
@@ -38,33 +38,26 @@
                     </td> 
                 </tr>
                 <tr>
-                    <td class="lfTdBt">项目名称：</td>
+                    <td class="lfTdBt">法识标题：</td>
                     <td class="rgTdBt"><input type="text" name="data[title]" value="<{$detail.title|default=''}>" class="manageInput" />
                     </td>
                 </tr>
-                <tr>
-                    <td class="lfTdBt">项目副标题：</td>
-                    <td class="rgTdBt"><input type="text" name="data[intro]" value="<{$detail.intro|default=''}>" class="manageInput" />
+               <tr>
+                    <td class="lfTdBt">来源：</td>
+                    <td class="rgTdBt"><input type="text" name="data[source]" value="<{$detail.source|default=''}>" class="manageInput" />
+
+                    </td>
+                </tr><tr>
+                    <td class="lfTdBt">关键字：</td>
+                    <td class="rgTdBt"><input type="text" name="data[keywords]" value="<{$detail.keywords|default=''}>" class="manageInput" />
+                        <code>多个关键字用,逗号分隔</code>
                     </td>
                 </tr>
-                <tr>
-                    <td class="lfTdBt">参加活动：</td>
-                    <td class="rgTdBt">
-                        <select id="activity_id" name="data[activity_id]" class="seleFl w300">
-                            <option value="0">请选择</option>
-                            <foreach name="hd" item="var">
-                                <option <eq name="var.activity_id" value="$detail['activity_id']">selected="selected"</eq>value="<{$var.activity_id}>"><{$var.title}></option>                
-                            </foreach>
-                        </select>
+				<tr>
+                    <td class="lfTdBt">描述：</td>
+                    <td class="rgTdBt"><textarea  name="data[intro]" cols="50" rows="10" ><{$detail.intro|default=''}></textarea>
+                        <code>简单的文章描述</code>
                     </td>
-                </tr>
-                <tr>
-                    <td class="lfTdBt">选择分院：</td>
-                    <td class="rgTdBt">
-                <foreach name="branch" item="lawyerkown">
-                    <label style="margin-right: 10px;"><span><{$lawyerkown.name}>：</span><input style="width: 20px; height: 20px;" type="checkbox" name="branch_id[]" value="<{$lawyerkown.branch_id}>" <?php if(in_array($lawyerkown['branch_id'],$branch_id)){?> checked="checked" <?php }?> /></label>
-                </foreach>
-                </td>
                 </tr>
                 <tr>
                     <td class="lfTdBt">
@@ -99,120 +92,19 @@
                     </script>
                 </td>
                 </tr>
-                <tr>
-                    <td  class="lfTdBt">购买项目组图：</td>
-                    <td class="rgTdBt">
-                        <div>
-                            <input id="thumb_file" name="logo_file" type="file" multiple="true" value="" />
-                        </div>
-                        <div class="jq_uploads_img">
-                            <foreach  name="thumb" item="lawyerkown">
-                                <span style="width: 200px; height: 120px; float: left; margin-left: 5px; margin-top: 10px;"> 
-                                    <img width="200" height="100" src="__ROOT__/attachs/<{$lawyerkown}>">  
-                                    <input type="hidden" name="thumb[]" value="<{$lawyerkown}>" />  
-                                    <a href="javascript:void(0);">取消</a>  
-                                </span>
-                            </foreach>
-                        </div>
-                        <script>
-                            $("#thumb_file").uploadify({
-                                'swf': '__PUBLIC__/js/uploadify/uploadify.swf?t=<{$nowtime}>',
-                                'uploader': '<{:U("app/upload/uploadify",array("model"=>"lawyerkown"))}>',
-                                'cancelImg': '__PUBLIC__/js/uploadify/uploadify-cancel.png',
-                                'buttonText': '上传图片',
-                                'fileTypeExts': '*.gif;*.jpg;*.png',
-                                'queueSizeLimit': 5,
-                                'onUploadSuccess': function (file, data, response) {
-                                    var str = '<span style="width: 200px; height: 120px; float: left; margin-left: 5px; margin-top: 10px;">  <img width="200" height="100" src="__ROOT__/attachs/' + data + '">  <input type="hidden" name="thumb[]" value="' + data + '" />    <a href="javascript:void(0);">取消</a>  </span>';
-                                    $(".jq_uploads_img").append(str);
-                                }
-                            });
-
-                            $(document).on("click", ".jq_uploads_img a", function () {
-                                $(this).parent().remove();
-                            });
-
-                        </script>
-                    </td>
-                </tr>
+               
                 <tr>
                     <td class="lfTdBt">属性：</td>
                     <td class="rgTdBt">
                         <label><span>是否热门：</span><input type="checkbox" name="data[is_hot]" <if condition="$detail['is_hot'] eq 1"> checked="checked" </if>  value="1" /></label>
-                        <label><span style="margin-left: 20px;">是否精选：</span><input type="checkbox" name="data[is_chose]" <if condition="$detail['is_chose'] eq 1"> checked="checked" </if> value="1" /></label>
-                        <label><span style="margin-left: 20px;">是否新单：</span><input type="checkbox" name="data[is_new]" <if condition="$detail['is_new'] eq 1"> checked="checked" </if> value="1" /></label>
-                        <label><span style="margin-left: 20px;">是否免预约：</span><input type="checkbox" name="data[freebook]" <if condition="$detail['freebook'] eq 1"> checked="checked" </if> value="1" /></label>
-                        <label><span style="margin-left: 20px;">是否返现1%：</span><input type="checkbox" name="data[is_return_cash]" <if condition="$detail['is_return_cash'] eq 1"> checked="checked" </if> value="1" /></label>
-						<label><span style="margin-left: 20px;">是否仅能下一次单</span><input type="checkbox" name="data[xiadan]" <if condition="$detail['xiadan'] eq 1"> checked="checked" </if> value="1" /></label>
-                    </td>
+                        <label><span style="margin-left: 20px;">是否推荐：</span><input type="checkbox" name="data[is_chose]" <if condition="$detail['is_chose'] eq 1"> checked="checked" </if> value="1" /></label>
+                        <label><span style="margin-left: 20px;">是否新：</span><input type="checkbox" name="data[is_new]" <if condition="$detail['is_new'] eq 1"> checked="checked" </if> value="1" /></label>
+                         </td>
                 </tr>
-				<tr>
-                    <td  class="lfTdBt">每天购买份数：</td>
-                    <td class="rgTdBt"><input type="text" name="data[xiangou]" value="<{$detail.xiangou|default='0'}>" class="manageInput" />
- 					<code>0表示不限购</code>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="lfTdBt">市场价格：</td>
-                    <td class="rgTdBt"><input type="text" name="data[price]" value="<{$detail.price|default=''}>" class="manageInput" />
-
-                    </td>
-                </tr><tr>
-                    <td class="lfTdBt">购买价格：</td>
-                    <td class="rgTdBt"><input type="text" name="data[lawyerkown_price]" value="<{$detail.lawyerkown_price|default=''}>" class="manageInput" />
-                    </td>
-                </tr>
-                <tr>
-                    <td class="lfTdBt">手机下单优惠价格：</td>
-                    <td class="rgTdBt"><input type="text" name="data[mobile_fan]" value="<{$detail.mobile_fan|default=''}>" class="manageInput" />
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="lfTdBt">可使用积分：</td>
-                    <td class="rgTdBt"><input type="text" name="data[use_integral]" value="<{$detail.use_integral|default=''}>" class="manageInput" />
-                        <code>100积分抵用1块钱RMB</code>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="lfTdBt">结算价格：</td>
-                    <td class="rgTdBt"><input type="text" name="data[settlement_price]" value="<{$detail.settlement_price|default=''}>" class="manageInput" />
-                        <code>网站和医院结算的价格</code>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="lfTdBt">库存：</td>
-                    <td class="rgTdBt"><input type="text" name="data[num]" value="<{$detail.num|default=''}>" class="manageInput" />
-                    </td>
-                </tr><tr>
-                    <td class="lfTdBt">售出数：</td>
-                    <td class="rgTdBt"><input type="text" name="data[sold_num]" value="<{$detail.sold_num|default=''}>" class="manageInput" />
-                    </td>
-                </tr>
-                <tr>
-                    <td class="lfTdBt">排序：</td>
-                    <td class="rgTdBt"><input type="text" name="data[orderby]" value="<{$detail.orderby|default=''}>" class="manageInput" />
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="lfTdBt">开始时间：</td>
-                    <td class="rgTdBt"><input type="text" name="data[bg_date]" value="<{$detail.bg_date|default=''}>" onfocus="WdatePicker();"  class="inputData" />
-                    </td>
-                </tr><tr>
-                    <td class="lfTdBt">结束时间：</td>
-                    <td class="rgTdBt"><input type="text" name="data[end_date]" value="<{$detail.end_date|default=''}>" onfocus="WdatePicker();"  class="inputData" />
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="lfTdBt">虚拟物品过期时间：</td>
-                    <td class="rgTdBt"><input type="text" name="data[fail_date]" value="<{$detail.fail_date|default=''}>" onfocus="WdatePicker();"  class="inputData" />
-                    </td>
-                </tr><tr>
-                    <td class="lfTdBt">购买详情：</td>
+			   <tr>
+                    <td class="lfTdBt">法识详情：</td>
                     <td class="rgTdBt">
-                        <script type="text/plain" id="data_details" name="details" style="width:800px;height:360px;"><{$lawyerkown_details.details}></script>
+                        <script type="text/plain" id="data_details" name="details" style="width:800px;height:460px;"><{$detail.details}></script>
                     </td>
                 </tr>
                 <link rel="stylesheet" href="__PUBLIC__/umeditor/themes/default/css/umeditor.min.css" type="text/css">
@@ -228,21 +120,7 @@
                             focus: false
                         });
                 </script>
-                <tr>
-                    <td class="lfTdBt">购买须知：</td>
-                    <td class="rgTdBt">
-                        <script type="text/plain" id="instructions" name="instructions" style="width:800px;height:360px;"><{$lawyerkown_details.instructions}></script>
-                    </td>
-                </tr>
-                <script>
-                    um2 = UM.getEditor('instructions', {
-                        imageUrl: "<{:U('app/upload/editor')}>",
-                        imagePath: '__ROOT__/attachs/editor/',
-                        lang: 'zh-cn',
-                        langPath: UMEDITOR_CONFIG.UMEDITOR_HOME_URL + "lang/",
-                        focus: false
-                    });
-                </script>
+               
             </table>
         </div>
         <div class="smtQr"><input type="submit" value="确认保存" class="smtQrIpt" /></div>      
