--- a/Bincms/Tpl/lawyercate/index.html
+++ b/Bincms/Tpl/lawyercate/index.html
@@ -2,8 +2,8 @@
 
 <div class="mainBt">
     <ul>
-        <li class="li1">商家</li>
-        <li class="li2">商家分类</li>
+        <li class="li1"> 专长</li>
+        <li class="li2"> 专长分类</li>
         <li class="li2 li3">分类列表</li>
     </ul>
 </div>
@@ -12,7 +12,7 @@
     <div class="jsglNr">
         <div class="selectNr" style="border-top: 1px solid #dbdbdb;">
             <div class="left">
-                <{:BA('shopcate/create','','添加一级分类','load','',600,550)}>
+                <{:BA('Lawyercate/create','','添加一级分类','load','',600,550)}>
             </div>
         </div>
 
@@ -31,14 +31,14 @@
                             <td style="padding-left:20px;"><{$var.cate_name}>(<{$var.cate_id}>)</td>
                             <td style="padding-left:70px;"><input name="orderby[<{$var.cate_id}>]" value="<{$var.orderby}>" type="text" class="remberinput w80" /></td>
                             <td style="text-align:center;">
-                                <{:BA('shopcate/create',array("parent_id"=>$var['cate_id']),'添加子分类','load','remberBtn',600,550)}>
+                                <{:BA('Lawyercate/create',array("parent_id"=>$var['cate_id']),'添加子分类','load','remberBtn',600,550)}>
                                 <eq name="var.is_hot" value="0">
-                                <{:BA('shopcate/hots',array("cate_id"=>$var["cate_id"]),'设为热门','act','remberBtn')}>
+                                <{:BA('Lawyercate/hots',array("cate_id"=>$var["cate_id"]),'设为热门','act','remberBtn')}>
                         <else />
-                        <{:BA('shopcate/hots',array("cate_id"=>$var["cate_id"]),'取消热门','act','remberBtn')}>
+                        <{:BA('Lawyercate/hots',array("cate_id"=>$var["cate_id"]),'取消热门','act','remberBtn')}>
                         </eq>
-                        <{:BA('shopcate/edit',array("cate_id"=>$var["cate_id"]),'编辑','load','remberBtn',600,550)}>
-                        <{:BA('shopcate/delete',array("cate_id"=>$var["cate_id"]),'删除','act','remberBtn')}>
+                        <{:BA('Lawyercate/edit',array("cate_id"=>$var["cate_id"]),'编辑','load','remberBtn',600,550)}>
+                        <{:BA('Lawyercate/delete',array("cate_id"=>$var["cate_id"]),'删除','act','remberBtn')}>
                         </td>
                         </tr>
                         <foreach name="list" item="var2">
@@ -48,12 +48,12 @@
                                 <td><input name="orderby[<{$var2.cate_id}>]" value="<{$var2.orderby}>" type="text" class="remberinput w80" /></td>
                                 <td>
                                     <eq name="var2.is_hot" value="0">
-                                    <{:BA('shopcate/hots',array("cate_id"=>$var2["cate_id"]),'设为热门','act','remberBtn')}>
+                                    <{:BA('Lawyercate/hots',array("cate_id"=>$var2["cate_id"]),'设为热门','act','remberBtn')}>
                             <else />
-                            <{:BA('shopcate/hots',array("cate_id"=>$var2["cate_id"]),'取消热门','act','remberBtn')}>
+                            <{:BA('Lawyercate/hots',array("cate_id"=>$var2["cate_id"]),'取消热门','act','remberBtn')}>
                             </eq>
-                            <{:BA('shopcate/edit',array("cate_id"=>$var2["cate_id"]),'编辑','load','remberBtn',600,550)}>
-                            <{:BA('shopcate/delete',array("cate_id"=>$var2["cate_id"]),'删除','act','remberBtn')}>
+                            <{:BA('Lawyercate/edit',array("cate_id"=>$var2["cate_id"]),'编辑','load','remberBtn',600,550)}>
+                            <{:BA('Lawyercate/delete',array("cate_id"=>$var2["cate_id"]),'删除','act','remberBtn')}>
                             </td>
                             </tr>
                             </eq>
@@ -63,7 +63,7 @@
                 </table>
                 <div class="selectNr">
                     <div class="left">
-                        <{:BA('shopcate/update','','更新','list','remberBtn')}>
+                        <{:BA('Lawyercate/update','','更新','list','remberBtn')}>
                     </div>
                 </div>
             </form>
