--- a/Bincms/Tpl/lawyercate/create.html
+++ b/Bincms/Tpl/lawyercate/create.html
@@ -1,6 +1,6 @@
 <div class="listBox clfx" style="width: 800px;">
     <div class="menuManage">
-        <form  target="baocms_frm" action="<{:U('shopcate/create',array('parent_id'=>$parent_id))}>" method="post">
+        <form  target="baocms_frm" action="<{:U('Lawyercate/create',array('parent_id'=>$parent_id))}>" method="post">
             <div class="mainScAdd">
                 <div class="tableBox">
                     <table  bordercolor="#dbdbdb" cellspacing="0" width="100%" border="1px"  style=" border-collapse: collapse; margin:0px; vertical-align:middle; background-color:#FFF;" >
@@ -20,19 +20,19 @@
                         <tr>
                             <td class="lfTdBt">点评项1：</td>
                             <td class="rgTdBt"><input type="text" name="data[d1]" value="<{$detail.d1|default=''}>" class="scAddTextName w150" />
-                                <code>主要用着商家点评，默认预设了3个点评项</code>
+                                <code>主要用着律师点评，默认预设了3个点评项</code>
                             </td>
                         </tr>
                         <tr>
                             <td class="lfTdBt">点评项2：</td>
                             <td class="rgTdBt"><input type="text" name="data[d2]" value="<{$detail.d2|default=''}>" class="scAddTextName w150" />
-                                <code>主要用着商家点评，默认预设了3个点评项</code>
+                                <code>主要用着律师点评，默认预设了3个点评项</code>
                             </td>
                         </tr>
                         <tr>
                             <td class="lfTdBt">点评项3：</td>
                             <td class="rgTdBt"><input type="text" name="data[d3]" value="<{$detail.d3|default=''}>" class="scAddTextName w150" />
-                                <code>主要用着商家点评，默认预设了3个点评项</code>
+                                <code>主要用着律师点评，默认预设了3个点评项</code>
                             </td>
                         </tr>
                         <tr>
