--- a/Bincms/Tpl/itemcate/create.html
+++ b/Bincms/Tpl/itemcate/create.html
@@ -1,4 +1,4 @@
-<form  target="baocms_frm" action="<{:U('tuancate/create',array('parent_id'=>$parent_id))}>" method="post">
+<form  target="baocms_frm" action="<{:U('itemcate/create',array('parent_id'=>$parent_id))}>" method="post">
     <div class="mainScAdd ">
         <div class="tableBox">
             <table bordercolor="#e1e6eb" cellspacing="0" width="100%" border="1px"  style=" border-collapse: collapse; margin:0px; vertical-align:middle; background-color:#FFF;" >
