--- a/Bincms/Tpl/lawyer/create.html
+++ b/Bincms/Tpl/lawyer/create.html
@@ -185,7 +185,7 @@
                             'queueSizeLimit': 1,
                             'onUploadSuccess': function (file, data, response) {
 							
-							alert(data);
+							//alert(data);
                                 $("#data_logo").val(data);
                                 $("#logo_img").attr('src', '__ROOT__/attachs/' + data).show();
                             }
