--- a/Bincms/Tpl/index/main.html
+++ b/Bincms/Tpl/index/main.html
@@ -20,33 +20,33 @@
                     <div class="nr">
                         <div class="lef">
                             <ul>
-                                <li>今日订单</li>
+                               <!--  <li>今日订单</li>
                                 <li class="bg">总订单</li>
                                 <li>今日充值</li>
                                 <li class="bg">总充值</li>
                                 <li>今日预约</li>
-                                <li class="bg">总预约</li>
+                                <li class="bg">总预约</li> -->
                               <!--   <li>今日优惠券下载 </li>
                                 <li class="bg">总优惠券下载</li> -->
-                                <li>点评</li>
+                              <!--   <li>点评</li> -->
                                 <li class="bg">会员数</li>
-                                <li>医院数</li>
+                                <li>律师数</li>
                               <!--   <li class="bg">消费分享</li> -->
                             </ul>
                         </div>
                         <div class="lef">
                             <ul>
-                                <li>共<span><{$counts.totay_order}></span>条订单</li>
+                               <!--  <li>共<span><{$counts.totay_order}></span>条订单</li>
                                 <li class="bg">共<span><{$counts.order}></span>条订单</li>
                                 <li>共<span><{$counts.totay_gold}></span>条充值</li>
                                 <li class="bg">共<span><{$counts.totay_gold}></span>条充值</li>
                                 <li>共<span><{$counts.today_yuyue}></span>条预约</li>
-                                <li class="bg">共<span><{$counts.yuyue}></span>条预约</li>
+                                <li class="bg">共<span><{$counts.yuyue}></span>条预约</li> -->
                                 <!-- <li>共<span><{$counts.today_coupon}></span>条下载</li>
                                 <li class="bg">共<span><{$counts.coupon}></span>条下载</li> -->
-                                <li>共<span><{$counts.dianping}></span>条点评</li>
+                                <!-- <li>共<span><{$counts.dianping}></span>条点评</li> -->
                                 <li class="bg">共<span><{$counts.users}></span>个会员</li>
-                                <li>共<span><{$counts.shops}></span>医院</li>
+                                <li>共<span><{$counts.shops}></span>位律师</li>
                                 <!-- <li class="bg">共<span><{$counts.post}></span>条分享</li> -->
                             </ul>
                         </div>
