--- a/Bincms/Tpl/itemcate/index.html
+++ b/Bincms/Tpl/itemcate/index.html
@@ -1,9 +1,9 @@
 <include  file='public:header'/>
 <div class="mainBt">
     <ul>
-        <li class="li1"> 项目频道</li>
-        <li class="li2">医院产品</li>
-        <li class="li2 li3"产品类别</li>
+        <li class="li1"> 咨询频道</li>
+        <li class="li2">咨询</li>
+        <li class="li2 li3">咨询类别</li>
     </ul>
 </div>
 <div class="main-cate">
