--- a/Bincms/Tpl/lawyer/edit.html
+++ b/Bincms/Tpl/lawyer/edit.html
@@ -1,12 +1,12 @@
 <include  file='public:header'/>
 <div class="mainBt">
     <ul>
-        <li class="li1">医院</li>
-        <li class="li2">医院管理</li>
-        <li class="li2 li3">编辑医院</li>
+        <li class="li1">律师</li>
+        <li class="li2">律师管理</li>
+        <li class="li2 li3">编辑律师</li>
     </ul>
 </div>
-<form  target="baocms_frm" action="<{:U('hospital/edit',array('hospital_id'=>$detail['hospital_id']))}>" method="post">
+<form  target="baocms_frm" action="<{:U('lawyer/edit',array('lawyer_id'=>$detail['lawyer_id']))}>" method="post">
     <div class="mainScAdd">
         <div class="tableBox">
             <table  bordercolor="#dbdbdb" cellspacing="0" width="100%" border="1px"  style=" border-collapse: collapse; margin:0px; vertical-align:middle; background-color:#FFF;" >
@@ -107,15 +107,15 @@
 
                     </td>
                 </tr><tr>
-                    <td class="lfTdBt">医院名称：</td>
-                    <td class="rgTdBt"><input type="text" name="data[hospital_name]" value="<{$detail.hospital_name|default=''}>" class="scAddTextName w210" />
+                    <td class="lfTdBt">律师名称：</td>
+                    <td class="rgTdBt"><input type="text" name="data[lawyer_name]" value="<{$detail.lawyer_name|default=''}>" class="scAddTextName w210" />
 
                     </td>
                 </tr><tr>
                     <td class="lfTdBt">
                 <js file='__PUBLIC__/js/uploadify/jquery.uploadify.min.js'/>
                 <link rel="stylesheet" href="__PUBLIC__/js/uploadify/uploadify.css">
-                医院LOGO：
+                律师LOGO：
                 </td>
                 <td class="rgTdBt">
                     <div style="width: 300px;height: 100px; float: left;">
@@ -125,14 +125,14 @@
                     <div style="width: 300px;height: 100px; float: left;">
                         <img id="logo_img" width="80" height="80"  src="__ROOT__/attachs/<{$detail.logo|default='default.jpg'}>" />
                         <a href="<{:U('setting/attachs')}>">缩略图设置</a>
-                        建议尺寸:<{$CONFIG.attachs.hospitallogo.thumb}>
+                        建议尺寸:<{$CONFIG.attachs.lawyerlogo.thumb}>
                     </div>
                     <script>
                         $("#logo_file").uploadify({
                             'swf': '__PUBLIC__/js/uploadify/uploadify.swf?t=<{$nowtime}>',
-                            'uploader': '<{:U("app/upload/uploadify",array("model"=>"hospitallogo"))}>',
+                            'uploader': '<{:U("app/upload/uploadify",array("model"=>"lawyerlogo"))}>',
                             'cancelImg': '__PUBLIC__/js/uploadify/uploadify-cancel.png',
-                            'buttonText': '上传医院LOGO',
+                            'buttonText': '上传律师LOGO',
                             'fileTypeExts': '*.gif;*.jpg;*.png',
                             'queueSizeLimit': 1,
                             'onUploadSuccess': function (file, data, response) {
@@ -145,7 +145,7 @@
                 </td>
             </tr><tr>
             <td class="lfTdBt">
-                医院缩略图：
+                律师缩略图：
             </td>
             <td class="rgTdBt">
                 <div style="width: 300px; height: 100px; float: left;">
@@ -154,14 +154,14 @@
                 </div>
                 <div style="width: 300px; height: 100px; float: left;">
                     <img id="photo_img" width="80" height="80"  src="__ROOT__/attachs/<{$detail.photo|default='default.jpg'}>" />
-                    <a href="<{:U('setting/attachs')}>">缩略图设置</a>建议尺寸:<{$CONFIG.attachs.hospitalphoto.thumb}>
+                    <a href="<{:U('setting/attachs')}>">缩略图设置</a>建议尺寸:<{$CONFIG.attachs.lawyerphoto.thumb}>
                 </div>
                 <script>
                     $("#photo_file").uploadify({
                         'swf': '__PUBLIC__/js/uploadify/uploadify.swf?t=<{$nowtime}>',
-                        'uploader': '<{:U("app/upload/uploadify",array("model"=>"hospitalphoto"))}>',
+                        'uploader': '<{:U("app/upload/uploadify",array("model"=>"lawyerphoto"))}>',
                         'cancelImg': '__PUBLIC__/js/uploadify/uploadify-cancel.png',
-                        'buttonText': '上传医院缩略图',
+                        'buttonText': '上传律师缩略图',
                         'fileTypeExts': '*.gif;*.jpg;*.png',
                         'queueSizeLimit': 1,
                         'onUploadSuccess': function (file, data, response) {
@@ -173,12 +173,12 @@
                 </script>
             </td>
         </tr><tr>
-            <td class="lfTdBt">医院地址：</td>
+            <td class="lfTdBt">律师地址：</td>
             <td class="rgTdBt">
                 <input type="text" name="data[addr]" value="<{$detail.addr|default=''}>" class="scAddTextName w210" />
             </td>
         </tr><tr>
-            <td class="lfTdBt">医院电话：</td>
+            <td class="lfTdBt">律师电话：</td>
             <td class="rgTdBt"><input type="text" name="data[tel]" value="<{$detail.tel|default=''}>" class="scAddTextName w210" />
 
             </td>
@@ -222,7 +222,7 @@
             </td>
         </tr> -->
         <tr>
-            <td class="lfTdBt">医院附近坐标：</td>
+            <td class="lfTdBt">律师附近坐标：</td>
             <td class="rgTdBt"><input type="text" name="data[near]" value="<{$ex.near|default=''}>" class="scAddTextName w210" />
 
             </td>
@@ -248,7 +248,7 @@
             </td>
         </tr> -->
         <tr>
-            <td class="lfTdBt">医院坐标：</td>
+            <td class="lfTdBt">律师坐标：</td>
             <td class="rgTdBt">
                 <div class="lt">
                     经度<input type="text" name="data[lng]" id="data_lng" value="<{$detail.lng|default=''}>" class="scAddTextName w210 w100" />
