--- a/Bincms/Tpl/lawyercate/edit.html
+++ b/Bincms/Tpl/lawyercate/edit.html
@@ -1,6 +1,6 @@
 <div class="listBox clfx">
     <div class="menuManage">
-        <form target="baocms_frm" action="<{:U('shopcate/edit',array('cate_id'=>$detail['cate_id']))}>" method="post">
+        <form target="baocms_frm" action="<{:U('Lawyercate/edit',array('cate_id'=>$detail['cate_id']))}>" method="post">
             <div class="mainScAdd">
                 <div class="tableBox">
                     <table  bordercolor="#dbdbdb" cellspacing="0" width="100%" border="1px"  style=" border-collapse: collapse; margin:0px; vertical-align:middle; background-color:#FFF;" >
