--- a/Bincms/Tpl/user/index.html
+++ b/Bincms/Tpl/user/index.html
@@ -44,10 +44,10 @@
                             <span>昵称</span>
                             <input type="text" name="nickname" value="<{$nickname}>" class="inptText" />
                         </label>
-                        <label>
+                      <!--   <label>
                             <span>扩展字段</span>
                             <input type="text" name="ext0" value="<{$ext0}>" class="inptText" />
-                        </label>
+                        </label> -->
                         <label>
                             <span>用户等级：</span>
                             <select name="rank_id" class="select w100">
@@ -74,10 +74,10 @@
                     <td>账户</td>
                     <td>昵称</td>
                     <td>会员等级</td>
-                    <td>扩展字段</td>
+                  <!--   <td>扩展字段</td>
                     <td>积分</td>
                     <td>金币</td>
-                    <td>账户余额</td>
+                    <td>账户余额</td> -->
                     <td>注册时间</td>
                     <td>注册IP</td>
                     <td>状态</td>
@@ -90,10 +90,10 @@
                         <td><{$var.account}></td>
                         <td><{$var.nickname}></td>
                         <td><{$ranks[$var['rank_id']]['rank_name']}></td>
-                        <td><{$var.ext0}></td>
+                      <!--   <td><{$var.ext0}></td>
                         <td><{$var.integral}></td>
                         <td><{$var.gold}></td>
-                        <td><{:round($var['money']/100,2)}></td>
+                        <td><{:round($var['money']/100,2)}></td> -->
                         <td><{$var.reg_time|date='Y-m-d H:i:s',###}></td>
                         <td><{$var.reg_ip}>(<{$var.reg_ip_area}>)</td>
 
@@ -107,15 +107,15 @@
                     </if>
                     </td>
                     <td>
-                        <{:BA('user/integral',array("user_id"=>$var["user_id"]),'积分','load','remberBtn',600,350)}>
+                      <!--   <{:BA('user/integral',array("user_id"=>$var["user_id"]),'积分','load','remberBtn',600,350)}> -->
                        <!--  <{:BA('user/gold',array("user_id"=>$var["user_id"]),'金块','load','remberBtn',600,350)}> -->
-                        <{:BA('user/money',array("user_id"=>$var["user_id"]),'余额','load','remberBtn',600,350)}>
+                      <!--   <{:BA('user/money',array("user_id"=>$var["user_id"]),'余额','load','remberBtn',600,350)}> -->
                         <{:BA('user/edit',array("user_id"=>$var["user_id"]),'编辑','load','remberBtn',700,600)}>
                         <{:BA('user/delete',array("user_id"=>$var["user_id"]),'删除','act','remberBtn')}>
                         <eq name="var.closed" value="-1">
                         <{:BA('user/audit',array("user_id"=>$var["user_id"]),'审核通过','act','remberBtn')}>
                         </eq>        
-                        <a target="_blank" href="<{:U('user/manage',array('user_id'=>$var['user_id']))}>" class="remberBtn">管理用户</a>
+                     <!--    <a target="_blank" href="<{:U('user/manage',array('user_id'=>$var['user_id']))}>" class="remberBtn">管理用户</a> -->
                     </td>
                     </tr>
                 </foreach>
