--- a/Bincms/Tpl/userrank/index.html
+++ b/Bincms/Tpl/userrank/index.html
@@ -23,8 +23,8 @@
                         <td>等级名称</td>
                         <td>等级图标</td>
                         <td>等级图标2</td>
-                        <td>分享返利（返积分）</td>
-                        <td>需要经验</td> 
+                      <!--   <td>分享返利（返积分）</td>
+                        <td>需要经验</td>  -->
                         <td>操作</td>
                     </tr>
                     <foreach name="list" item="var">
@@ -34,8 +34,8 @@
                             <td><{$var.rank_name}></td>
                             <td><{$var.icon}></td>
                             <td><{$var.icon1}></td>
-                            <td><{$var.rebate}>%</td>
-                            <td><{$var.prestige}></td>
+                        <!--     <td><{$var.rebate}>%</td>
+                            <td><{$var.prestige}></td> -->
                             <td>
                                 <{:BA('userrank/edit',array("rank_id"=>$var["rank_id"]),'编辑','load','remberBtn',800,550)}>
                                 <{:BA('userrank/delete',array("rank_id"=>$var["rank_id"]),'删除','act','remberBtn')}>
