--- a/Bincms/Tpl/index/main.html
+++ b/Bincms/Tpl/index/main.html
@@ -26,9 +26,9 @@
                                 <li class="bg">总充值</li>
                                 <li>今日预约</li>
                                 <li class="bg">总预约</li> -->
-                              <!--   <li>今日优惠券下载 </li>
-                                <li class="bg">总优惠券下载</li> -->
-                              <!--   <li>点评</li> -->
+                              <!--   <li>今日优惠券下载 </li>-->
+                                <li class="bg">咨询数量</li> 
+                               <li>在线回复数量</li> 
                                 <li class="bg">会员数</li>
                                 <li>律师数</li>
                               <!--   <li class="bg">消费分享</li> -->
@@ -42,9 +42,9 @@
                                 <li class="bg">共<span><{$counts.totay_gold}></span>条充值</li>
                                 <li>共<span><{$counts.today_yuyue}></span>条预约</li>
                                 <li class="bg">共<span><{$counts.yuyue}></span>条预约</li> -->
-                                <!-- <li>共<span><{$counts.today_coupon}></span>条下载</li>
-                                <li class="bg">共<span><{$counts.coupon}></span>条下载</li> -->
-                                <!-- <li>共<span><{$counts.dianping}></span>条点评</li> -->
+                                <!-- <li>共<span><{$counts.today_coupon}></span>条下载</li>-->
+                                <li class="bg">共<span><{$counts.coupon}></span>条在线咨询</li> 
+                               <li>共<span><{$counts.dianping}></span>条回复</li>
                                 <li class="bg">共<span><{$counts.users}></span>个会员</li>
                                 <li>共<span><{$counts.shops}></span>位律师</li>
                                 <!-- <li class="bg">共<span><{$counts.post}></span>条分享</li> -->
