--- a/themes/default/Pchome/public/topOne.html
+++ b/themes/default/Pchome/public/topOne.html
@@ -4,10 +4,13 @@
   <!--left-->
     <div class="top_top">
      <div class="top_top_left"> 
-     <input type="text" name="zh"placeholder="请输入账号" class="zhanghu" value="" />
+    <!--  <input type="text" name="zh"placeholder="请输入账号" class="zhanghu" value="" />
      <input type="text" name="mm"placeholder="请输入密码" class="mima" value="" />
-     <input type="submit" value="登录" class="denglu" />
-     <input type="submit" value="三秒快速注册" class="zhuce" />
+     <input type="submit" value="登录" class="denglu" /> -->
+	 
+	 <a     class="denglu"   href="<{:U('passport/login')}>"  target="_blank" class="zhuce" />登录</a>
+	 
+     <a href="<{:U('passport/login')}>"  target="_blank" class="zhuce" />三秒快速注册</a>
      </div>
      <!--right-->
      <div class="top_top_right">
