--- a/themes/default/Pchome/public/topTwo.html
+++ b/themes/default/Pchome/public/topTwo.html
@@ -5,8 +5,10 @@
 <title>登录注册</title>
 <link rel="stylesheet" href="__TMPL__statics/css/bootstrap.min.css">
 <link rel="stylesheet" href="__TMPL__statics/css/bootstrap-theme.min.css">
-<script type="text/javascript" src="__TMPL__statics/js/jquery-1.8.3.min.js"></script>
 <link rel="stylesheet" href="__TMPL__statics/css/style_new.css" type="text/css" />
+<script type="text/javascript" src="__TMPL__statics/js/jquery-1.8.3.min.js"></script>
+<script> var BAO_PUBLIC = '__PUBLIC__'; var BAO_ROOT = '__ROOT__';</script>
+
 <script type="text/javascript" src="__TMPL__statics/js/phonereg.js"></script>
 <script type="text/javascript" src="__TMPL__statics/js/login.js"></script>
 
